--- a/Showcase.Web/wwwroot/index.html
+++ b/Showcase.Web/wwwroot/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Showcase.Web</title>
-    <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <base href="/Showcase/" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="Showcase.Web.styles.css" rel="stylesheet" />
 </head>
