--- a/Showcase.Web/wwwroot/index.html
+++ b/Showcase.Web/wwwroot/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="color-scheme" content="light dark">
     <title>Showcase.Web</title>
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
